# simulacra

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  Cargo.toml  SPECS.md  reproduce_path  reproduce_path.rs
crates/simulacra-catalog/: Cargo.toml
crates/simulacra-catalog/migrations/: 0001_initial.sql  0002_agent_files.sql  0003_channels.sql
crates/simulacra-catalog/src/: agent_file_fs.rs  error.rs  ids.rs  lib.rs  migrate.rs  models.rs  skill_fs.rs
crates/simulacra-catalog/tests/: agent_file_fs.rs  agent_files.rs  channels.rs  memory_repos.rs  migrations.rs  skill_fs.rs  sqlite_repos.rs
crates/simulacra-cli/: AGENTS.md  Cargo.toml
crates/simulacra-cli/src/: activity_blocks.rs  catalog_import.rs  lib.rs  main.rs
crates/simulacra-cli/tests/: activity_display.rs  catalog_bootstrap.rs  cli_bootstrap.rs  cli_jsonl_output.rs  dev_config_workspace_mounts.rs  headless_spawn_orchestration.rs  headless_tool_fidelity.rs  interactive_rendering.rs  interactive_session.rs  mcp_catalog_bootstrap.rs  no_catalog_mode.rs  skill_discovery.rs  vfs_host_mounts.rs
crates/simulacra-frontend/: Cargo.toml
crates/simulacra-frontend/assets/: index.html  main.js  styles.css
crates/simulacra-frontend/src/: lib.rs
crates/simulacra-frontend/tests/: frontend_mount.rs
crates/simulacra-graphql/: Cargo.toml
crates/simulacra-graphql/src/: auth.rs  context.rs  error.rs  lib.rs  tool_catalog.rs
crates/simulacra-graphql/tests/: agent_files_gql.rs  auth.rs  channels_gql.rs  mutations.rs  no_auth_graphql_provider.rs  queries.rs  tools_surface.rs
crates/simulacra-hooks/: Cargo.toml
crates/simulacra-hooks/fixtures/: deny-tool.js  modify-context.js  pass-through.js  slow-hook.js
crates/simulacra-hooks/src/: error.rs  js.rs  lib.rs  pipeline.rs  verdict.rs
crates/simulacra-hooks/tests/: hook_pipeline_tests.rs  js_hook_tests.rs
crates/simulacra-http/: Cargo.toml
crates/simulacra-http/src/: client.rs  lib.rs  types.rs
crates/simulacra-integration/: Cargo.toml
crates/simulacra-integration/src/: injector.rs  lib.rs  metrics.rs  registry.rs  types.rs
crates/simulacra-integration/tests/: credential_injection.rs  credential_resolution.rs  oauth2_lifecycle.rs  tenant_scoped_access.rs
crates/simulacra-mcp/: AGENTS.md  Cargo.toml
crates/simulacra-mcp-server-sdk/: Cargo.toml
crates/simulacra-mcp-server-sdk-macro/: Cargo.toml
crates/simulacra-mcp-server-sdk-macro/src/: lib.rs
crates/simulacra-mcp-server-sdk/src/: fetch.rs  fixtures.rs  lib.rs
crates/simulacra-mcp-server-sdk/tests/: macro.rs
crates/simulacra-mcp-test-server/: Cargo.toml
crates/simulacra-mcp-test-server/src/: main.rs
crates/simulacra-mcp/src/: bootstrap.rs  catalog.rs  error.rs  lib.rs  observability.rs  tool.rs
crates/simulacra-mcp/tests/: mcp_protocol.rs  mcp_streamable_http_tests.rs  wasm_mcp_config.rs  wasm_mcp_e2e_fetch.rs  wasm_mcp_fetch.rs  wasm_mcp_observability.rs  wasm_mcp_transport.rs
crates/simulacra-mcp/wit/: simulacra-mcp-server.wit
crates/simulacra-memory/: Cargo.toml
crates/simulacra-memory/examples/: memory_loop.rs
crates/simulacra-memory/src/: background.rs  chunker.rs  chunkers.rs  embedder.rs  embedders.rs  error.rs  hit_cache.rs  index.rs  lib.rs  metrics.rs  reindex_startup.rs  retention.rs  rrwb.rs  sqlite_index.rs  sqlite_store.rs  store.rs
crates/simulacra-memory/tests/: background_embedder.rs  chunkers.rs  embedder.rs  freshness.rs  hit_id_cache.rs  memory_metrics.rs  model_change_reindex.rs  retention_reaper.rs  s038_ensure_tenant_and_shutdown.rs  s039_memory_store_subscribe.rs  sqlite_memory_store.rs  sqlite_vector_index.rs
crates/simulacra-provider/: AGENTS.md  Cargo.toml
crates/simulacra-provider/src/: lib.rs
crates/simulacra-provider/tests/: openai_provider.rs
crates/simulacra-python/: Cargo.toml
crates/simulacra-python-runtime/: Cargo.toml
crates/simulacra-python-runtime/src/: convert.rs  dispatch.rs  error.rs  lib.rs  runtime.rs
crates/simulacra-python-runtime/tests/: python_runtime_tests.rs
crates/simulacra-python/src/: lib.rs  tool.rs
crates/simulacra-python/tests/: py_exec_tool_tests.rs  python_engine_tests.rs
crates/simulacra-quickjs/: AGENTS.md  Cargo.toml
crates/simulacra-quickjs/src/: crypto_module.rs  formatting.rs  globals.rs  host_api.rs  lib.rs  module_loading.rs  native_modules.rs  path_module.rs  tests.rs  url_polyfill.js
crates/simulacra-quickjs/tests/: console_formatting.rs  native_modules.rs  s053_async_runtime.rs
crates/simulacra-runtime/: AGENTS.md  Cargo.toml
crates/simulacra-runtime/src/: acp_child.rs  activity_sink.rs  agent_loop.rs  error.rs  exit_reason.rs  guardrail.rs  journal.rs  journal_sqlite.rs  lib.rs  replay.rs  session.rs  session_file.rs  session_sqlite.rs  spawn_tool.rs  sqlite_util.rs  tests.rs  vfs_hook.rs
crates/simulacra-runtime/tests/: activity_events.rs  agent_supervisor.rs  e2e.rs  resource_budget.rs  s039_vfs_write_hook.rs  s039_vfs_write_o11y.rs  subagent_spawn.rs
crates/simulacra-sandbox/: AGENTS.md  Cargo.toml
crates/simulacra-sandbox/src/: executor.rs  fetch_proxy.rs  file_io.rs  fs_proxy.rs  guards.rs  http.rs  js.rs  lib.rs  module_fetcher.rs  python.rs  runtime.rs  shell.rs  shell_http_proxy.rs  unit_tests.rs  vfs_mutation.rs  vfs_state.rs
crates/simulacra-sandbox/tests/: agent_cell_sandbox.rs  agent_procfs_integration.rs  e2e_esm.rs  esm_module_loading.rs  node_tool_alias.rs  python_tool_alias.rs  s053_async_quickjs_runtime.rs  sandbox_admission.rs  sandbox_budget_scopes.rs  sandbox_fs_proxy.rs  sandbox_journal.rs  sandbox_modules.rs  sandbox_network.rs  sandbox_observability.rs
crates/simulacra-server/: Cargo.toml
crates/simulacra-server/examples/: dev_server.rs  e2e_test.rs  s036_demo.rs  s037_memory_demo.rs  s037_virtual_coworkers.rs  serve.rs  toy_saas.rs
crates/simulacra-server/src/: artifact_store.rs  (+12 more)
crates/simulacra-shell/: AGENTS.md  Cargo.toml
crates/simulacra-tool/: AGENTS.md  Cargo.toml
crates/simulacra-types/: AGENTS.md  Cargo.toml
crates/simulacra-vfs/: AGENTS.md  Cargo.toml
crates/simulacra-wasm/: Cargo.toml
crates/simulacra-workflow/: Cargo.toml
(+568 files in other folders)
