[package]
name = "simulacra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "simulacra"
path = "src/main.rs"

[features]
default = []
test-support = []
wasm = ["dep:simulacra-wasm"]
python = ["dep:simulacra-python", "simulacra-sandbox/python"]

[dependencies]
simulacra-catalog.workspace = true
simulacra-config.workspace = true
simulacra-context.workspace = true
simulacra-mcp.workspace = true
simulacra-types.workspace = true
simulacra-sandbox.workspace = true
simulacra-http.workspace = true
simulacra-tool.workspace = true
simulacra-runtime.workspace = true
simulacra-hooks.workspace = true
simulacra-provider.workspace = true
simulacra-vfs.workspace = true
simulacra-memory.workspace = true
simulacra-integration.workspace = true
simulacra-wasm = { workspace = true, optional = true }
simulacra-python = { workspace = true, optional = true }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
rust_decimal.workspace = true
tokio.workspace = true
uuid.workspace = true
crossterm.workspace = true
opentelemetry-appender-tracing.workspace = true
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
simulacra-cli = { path = ".", features = ["test-support"] }
serde_json.workspace = true
tokio.workspace = true
tempfile = "3"
