[package]
name = "simulacra-graphql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simulacra-catalog.workspace = true

async-graphql.workspace = true
axum.workspace = true
base64 = "0.22"
http.workspace = true
parking_lot.workspace = true

async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
hyper.workspace = true
tempfile = "3"
