[package]
name = "simulacra-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simulacra-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
thiserror.workspace = true
rquickjs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
