[package]
name = "simulacra-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
ureq.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
simulacra-hooks.workspace = true
serde_json.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["registry"] }
