[package]
name = "simulacra-mcp-server-sdk-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc-macros for simulacra-mcp-server-sdk (#[mcp_tool])"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
