[package]
name = "simulacra-mcp-server-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authoring SDK for WASM MCP servers (S041)"

[dependencies]
simulacra-mcp-server-sdk-macro = { path = "../simulacra-mcp-server-sdk-macro" }
inventory = "0.3"
schemars = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
