[package]
name = "simulacra-mcp-test-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mcp-test-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }
