[package]
name = "simulacra-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["anthropic", "openai"]
anthropic = []
openai = []

[dependencies]
simulacra-types.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
opentelemetry.workspace = true

[dev-dependencies]
rust_decimal.workspace = true
tracing-subscriber.workspace = true
