[package]
name = "simulacra-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["anthropic", "openai", "bedrock"]
anthropic = []
openai = []
bedrock = ["dep:sha2", "dep:hmac", "dep:hex", "dep:percent-encoding"]

[dependencies]
simulacra-types.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }
percent-encoding = { version = "2", optional = true }

[dev-dependencies]
rust_decimal.workspace = true
tracing-subscriber.workspace = true
