[package]
name = "simulacra-python-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
monty = { git = "https://github.com/pydantic/monty" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
