[package]
name = "simulacra-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simulacra-python-runtime.workspace = true
simulacra-types.workspace = true
simulacra-sandbox.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
simulacra-http.workspace = true
simulacra-sandbox.workspace = true
simulacra-vfs.workspace = true
rust_decimal.workspace = true
