[package]
name = "simulacra-quickjs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
simulacra-types.workspace = true
simulacra-vfs.workspace = true
simulacra-fetch.workspace = true
hex = "0.4"
md-5 = "0.10"
rand = "0.8"
rquickjs.workspace = true
rquickjs-serde.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json.workspace = true
tracing-subscriber.workspace = true
