[package]
name = "simulacra-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simulacra-types.workspace = true
simulacra-memory.workspace = true
simulacra-sandbox.workspace = true
simulacra-hooks.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
simulacra-http.workspace = true
simulacra-vfs.workspace = true
rust_decimal.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
