[package]
name = "simulacra-tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simulacra-types.workspace = true
simulacra-memory.workspace = true
simulacra-sandbox = { workspace = true, optional = true }
simulacra-vfs = { workspace = true, optional = true }
simulacra-hooks.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
sandbox = ["dep:simulacra-sandbox", "dep:simulacra-vfs"]

[dev-dependencies]
simulacra-http.workspace = true
rust_decimal.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
