[package]
name = "simulacra-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for the Simulacra agent framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
