[package]
name = "simulacra-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simulacra-config.workspace = true
simulacra-memory.workspace = true
simulacra-types.workspace = true
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["testing"] }
proptest = "1"
tempfile = "3"
tracing.workspace = true
tracing-subscriber.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
