[package]
name = "simulacra-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simulacra-types.workspace = true
wasmtime = { version = "43", default-features = false, features = ["component-model", "cranelift", "std"] }
wasmtime-wasi = "43"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
futures = "0.3"
